storage/innobase/os/os0file.cc
@@ -970,7 +970,7 @@ os_file_create_simple_func(
 	*success = false;
 
 	int		create_flag;
-	const char*	mode_str	= NULL;
+	const char*	mode_str __attribute__((unused));
 
 	ut_a(!(create_mode & OS_FILE_ON_ERROR_SILENT));
 	ut_a(!(create_mode & OS_FILE_ON_ERROR_NO_EXIT));
@@ -1046,12 +1046,14 @@ os_file_create_simple_func(
 
 	} while (retry);
 
+#ifdef HAVE_FCNTL_DIRECT
 	/* This function is always called for data files, we should disable
 	OS caching (O_DIRECT) here as we do in os_file_create_func(), so
 	we open the same file in the same mode, see man page of open(2). */
 	if (!srv_read_only_mode && *success) {
 		os_file_set_nocache(file, name, mode_str);
 	}
+#endif
 
 #ifndef _WIN32
 	if (!read_only
@@ -1137,7 +1139,7 @@ os_file_create_func(
 	);
 
 	int		create_flag;
-	const char*	mode_str	= NULL;
+	const char*	mode_str __attribute__((unused));
 
 	on_error_no_exit = create_mode & OS_FILE_ON_ERROR_NO_EXIT
 		? true : false;
@@ -1179,9 +1181,13 @@ os_file_create_func(
 		return(OS_FILE_CLOSED);
 	}
 
+#if defined _WIN32 || defined HAVE_FCNTL_DIRECT
 	ut_a(type == OS_LOG_FILE
 	     || type == OS_DATA_FILE
 	     || type == OS_DATA_FILE_NO_O_DIRECT);
+#else
+	ut_a(type == OS_LOG_FILE || type == OS_DATA_FILE);
+#endif
 
 	ut_a(purpose == OS_FILE_AIO || purpose == OS_FILE_NORMAL);
 
@@ -1224,6 +1230,7 @@ os_file_create_func(
 
 	} while (retry);
 
+#ifdef HAVE_FCNTL_DIRECT
 	/* We disable OS caching (O_DIRECT) only on data files */
 	if (!read_only
 	    && *success
@@ -1231,6 +1238,7 @@ os_file_create_func(
 	    && type != OS_DATA_FILE_NO_O_DIRECT) {
 		os_file_set_nocache(file, name, mode_str);
 	}
+#endif
 
 #ifndef _WIN32
 	if (!read_only
@@ -2147,12 +2155,14 @@ os_file_create_func(
 		}
 		break;
 
+#if defined _WIN32 || defined HAVE_FCNTL_DIRECT
 	case SRV_O_DIRECT_NO_FSYNC:
 	case SRV_O_DIRECT:
 		if (type != OS_DATA_FILE) {
 			break;
 		}
 		/* fall through */
+#endif
 	case SRV_ALL_O_DIRECT_FSYNC:
 		/*Traditional Windows behavior, no buffering for any files.*/
 		if (type != OS_DATA_FILE_NO_O_DIRECT) {
@@ -3037,17 +3047,14 @@ os_file_handle_error_cond_exit(
 	return(false);
 }
 
-#ifndef _WIN32
+#ifdef HAVE_FCNTL_DIRECT
 /** Tries to disable OS caching on an opened file descriptor.
 @param[in]	fd		file descriptor to alter
 @param[in]	file_name	file name, used in the diagnostic message
 @param[in]	name		"open" or "create"; used in the diagnostic
 				message */
 void
-os_file_set_nocache(
-	int	fd		MY_ATTRIBUTE((unused)),
-	const char*	file_name	MY_ATTRIBUTE((unused)),
-	const char*	operation_name	MY_ATTRIBUTE((unused)))
+os_file_set_nocache(int fd, const char *file_name, const char *operation_name)
 {
 	const auto innodb_flush_method = srv_file_flush_method;
 	switch (innodb_flush_method) {
@@ -3058,18 +3065,6 @@ os_file_set_nocache(
 		return;
 	}
 
-	/* some versions of Solaris may not have DIRECTIO_ON */
-#if defined(__sun__) && defined(DIRECTIO_ON)
-	if (directio(fd, DIRECTIO_ON) == -1) {
-		int	errno_save = errno;
-
-		ib::error()
-			<< "Failed to set DIRECTIO_ON on file "
-			<< file_name << "; " << operation_name << ": "
-			<< strerror(errno_save) << ","
-			" continuing anyway.";
-	}
-#elif defined(O_DIRECT)
 	if (fcntl(fd, F_SETFL, O_DIRECT) == -1) {
 		int		errno_save = errno;
 		static bool	warning_message_printed = false;
@@ -3088,10 +3083,8 @@ os_file_set_nocache(
 				<< ", continuing anyway.";
 		}
 	}
-#endif /* defined(__sun__) && defined(DIRECTIO_ON) */
 }
-
-#endif /* _WIN32 */
+#endif /* HAVE_FCNTL_DIRECT */
 
 /** Check if the file system supports sparse files.
 @param fh	file handle
